[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpyproxy"
version = "2.0.0"
description = "Python proxy that implements DPI evasion mechanisms (TLS record fragmentation, TCP segmentation, encrypted DNS)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
keywords = ["proxy", "dpi", "censorship", "tls", "dns", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
]
maintainers = [
    {name = "Niklas Niere", email = "niklas.niere@upb.de"},
    {name = "Felix Lange", email = "felix.lange@upb.de"}
]

dependencies = [
    # DNS-over-QUIC / DNS-over-HTTPS transport
    "aioquic>=1.2.0",
    # async I/O used by DNS module
    "anyio>=4.8.0",
    # TLS/crypto primitives
    "cryptography>=44.0.0",
    "pyOpenSSL>=25.0.0",
    # DNS resolution
    "dnspython>=2.7.0",
    # HTTP/2 framing (used by aioquic / httpx internally and may be imported directly)
    "h2>=4.2.0",
    # HTTP client used for DoH queries
    "httpx>=0.28.1",
    # service-identity verifies TLS certificates against hostnames
    "service-identity>=24.2.0",
    # exceptiongroup backport: needed on Python 3.10 (built-in from 3.11+)
    "exceptiongroup>=1.2.2; python_version < '3.11'",
    # typing_extensions backport: needed on Python 3.10/3.11
    "typing_extensions>=4.12.2; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/UPB-SysSec/DPYProxy"
Issues = "https://github.com/UPB-SysSec/DPYProxy/issues"

[project.scripts]
dpyproxy = "dpyproxy:main"

[tool.hatch.build.targets.wheel]
# The upstream repo has a flat layout: main.py and subdirs (enumerators/,
# exception/, modules/, network/, util/) all live at the root with no
# enclosing package. We include them all as top-level packages/modules,
# alongside the dpyproxy/ shim that provides the console_scripts entry-point.
packages = [
    "dpyproxy",
    "enumerators",
    "exception",
    "modules",
    "network",
    "util",
]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.hatch.build.targets.sdist]
include = [
    "dpyproxy/",
    "enumerators/",
    "exception/",
    "modules/",
    "network/",
    "util/",
    "main.py",
    "README.md",
]
