[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpyproxy"
version = "2.2.1"
description = "Python proxy that implements DPI evasion mechanisms (TLS record fragmentation, TCP segmentation, encrypted DNS, HTTP)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
keywords = ["proxy", "dpi", "censorship", "tls", "dns", "http", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
]

authors = [
    {name = "Niklas Niere", email = "niklas.niere@upb.de"},
    {name = "Felix Lange", email = "felix.lange@upb.de"},
]

dependencies = [
    "aioquic>=1.3.0",
    "anyio>=4.14.0",
    "attrs>=26.1.0",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "cryptography>=49.0.0",
    "dnspython>=2.8.0",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hyperframe>=6.1.0",
    "idna>=3.18",
    "pyasn1>=0.6.3",
    "pyasn1_modules>=0.4.2",
    "pycparser>=3.0",
    "pylsqpack>=0.3.24",
    "pyOpenSSL>=26.3.0",
    "service-identity>=26.1.0",
    "sniffio>=1.3.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    # exceptiongroup backport: needed on Python 3.10 (built-in from 3.11+)
    "exceptiongroup>=1.2.2; python_version < '3.11'",
    # typing_extensions backport: needed on Python 3.10/3.11
    "typing_extensions>=4.12.2; python_version < '3.12'",

]

[project.urls]
Homepage = "https://github.com/UPB-SysSec/DPYProxy"
Issues = "https://github.com/UPB-SysSec/DPYProxy/issues"

[project.scripts]
dpyproxy = "dpyproxy:main"

[tool.hatch.build.targets.wheel]
# The upstream repo has a flat layout: main.py and subdirs (enumerators/,
# exception/, modules/, network/, util/) all live at the root with no
# enclosing package. We include them all as top-level packages/modules,
# alongside the dpyproxy/ shim that provides the console_scripts entry-point.
packages = [
    "dpyproxy",
    "enumerators",
    "exception",
    "modules",
    "network",
    "test",
    "util",
]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.hatch.build.targets.sdist]
include = [
    "dpyproxy/",
    "enumerators/",
    "exception/",
    "modules/",
    "network/",
    "util/",
    "test/",
    "main.py",
    "README.md",
]
